2012-06-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php: Fixed incidents list
	retrieved because bad parse of XML due to CDATA use

2012-06-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora.js,
	godmode/reporting/reporting_builder.list_items.php: some fixes.

2012-06-18  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/update_pandora.php: Fixed typo in title.

	* include/config_process.php: Updated version / build

	* functions_config.php: Changed some defaults on text size

	* install.php: Small modifications in step3, bad render
	in chrome.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Added categories in the
	combo of sections (Operation and Administration)

2012-06-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed a bug which shows groups
	that only have empty agents.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Added missed sec2 to the menu 
	structure data. The main sec2 (not subsection). Clean code

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/menu.ajax.php: Added an ajax file to the functions
	of menu category

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	index.php
	operation/menu.php
	godmode/menu.php: Added functions to manage sec and sec2 to control
	access in ACLs. Rename variables in menu construction to can get 
	all the sata structures in other sections

2012-06-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_config.php: Fixed bug: Notice to change
	Admin password is displayed for other users.

2012-06-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/javascript/pandora.js,
	include/functions_incidents.php: cleaned source code style.
	
	* include/functions_users.php, operation/users/webchat.php: a lot of
	fixes, the "error connection" don't appear when timeout the