@@ -293,7 +293,7 @@
      /* Dump the real number of data to draw */
      $Values = "";
      foreach ($Data["Series"][$DataSerie]["Data"] as $Key => $Value)
-      { if ($Value != 0) { $Values[] = $Value; } }
+      { if ($Value != 0) { $Values[$Key] = $Value; } }
 
      /* Compute the wasted angular space between series */
      if (count($Values)==1) { $WastedAngular = 0; } else { $WastedAngular = count($Values) * $DataGapAngle; }
@@ -306,11 +306,18 @@
 
      /* Draw the polygon pie elements */
      $Step   = 360 / (2 * PI * $Radius);
-     $Offset = 360; $ID = count($Values)-1;
-     $Values = array_reverse($Values);
+     $Offset = 360; 
+	 // Commented due to fix bellow
+	 //$ID = count($Values)-1;
+
+	 // Commented due to fix bellow
+     // $Values = array_reverse($Values);
      $Slice  = 0; $Slices = ""; $SliceColors = ""; $Visible = ""; $SliceAngle = "";
      foreach($Values as $Key => $Value)
       {
+	   // Fix: ID equal to the index of array
+	   $ID = $Key;	
+  
        $Settings = array("R"=>$Palette[$ID]["R"],"G"=>$Palette[$ID]["G"],"B"=>$Palette[$ID]["B"],"Alpha"=>$Palette[$ID]["Alpha"]);
        $SliceColors[$Slice] = $Settings;
 
